--- a/src/Control/Question/level3/level3_form.ui
+++ b/src/Control/Question/level3/level3_form.ui
@@ -23,7 +23,7 @@
   <customwidget>
    <class>QCustomPlot</class>
    <extends>QWidget</extends>
-   <header location="global">../src/qcustomplot.h</header>
+   <header location="global">../src/Utilities/qcustomplot.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
