--- a/ui/simulator.ui
+++ b/ui/simulator.ui
@@ -55,12 +55,24 @@
           <item>
            <widget class="QWidget" name="widget" native="true">
             <layout class="QVBoxLayout" name="verticalLayout_5">
+             <property name="leftMargin">
+              <number>1</number>
+             </property>
+             <property name="rightMargin">
+              <number>1</number>
+             </property>
              <item>
               <layout class="QHBoxLayout" name="horizontalLayout_4">
                <item>
                 <widget class="QPushButton" name="m_pushButton_ecg">
                  <property name="text">
                   <string>ЭКГ</string>
+                 </property>
+                 <property name="checkable">
+                  <bool>true</bool>
+                 </property>
+                 <property name="checked">
+                  <bool>true</bool>
                  </property>
                 </widget>
                </item>
@@ -69,12 +81,18 @@
                  <property name="text">
                   <string>ЭМГ</string>
                  </property>
+                 <property name="checkable">
+                  <bool>true</bool>
+                 </property>
                 </widget>
                </item>
                <item>
                 <widget class="QPushButton" name="m_pushButton_eeg">
                  <property name="text">
                   <string>ЭЭГ</string>
+                 </property>
+                 <property name="checkable">
+                  <bool>true</bool>
                  </property>
                 </widget>
                </item>
@@ -575,12 +593,12 @@
                     </item>
                     <item>
                      <property name="text">
-                      <string>Точка</string>
+                      <string>точка</string>
                      </property>
                     </item>
                     <item>
                      <property name="text">
-                      <string>Линия по синусу</string>
+                      <string>линия</string>
                      </property>
                     </item>
                    </widget>
@@ -672,33 +690,10 @@
         </widget>
        </item>
        <item>
-        <spacer name="verticalSpacer_3">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item>
         <widget class="QWidget" name="w1" native="true">
-         <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,1,0,0">
+         <layout class="QVBoxLayout" name="verticalLayout" stretch="0,1,0,0">
           <item>
            <widget class="QComboBox" name="cbNameSig"/>
-          </item>
-          <item>
-           <widget class="QLabel" name="label_plot">
-            <property name="text">
-             <string>PQRST</string>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignCenter</set>
-            </property>
-           </widget>
           </item>
           <item>
            <widget class="QCustomPlot" name="plot" native="true">
