--- a/ui/simulator.ui
+++ b/ui/simulator.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1472</width>
-    <height>880</height>
+    <height>1033</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -448,11 +448,14 @@
                   </item>
                   <item>
                    <widget class="QDoubleSpinBox" name="dsb_end">
+                    <property name="decimals">
+                     <number>4</number>
+                    </property>
                     <property name="minimum">
                      <double>0.010000000000000</double>
                     </property>
                     <property name="singleStep">
-                     <double>0.010000000000000</double>
+                     <double>0.000100000000000</double>
                     </property>
                     <property name="value">
                      <double>0.040000000000000</double>
