--- a/ui/simulator.ui
+++ b/ui/simulator.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1472</width>
-    <height>1033</height>
+    <width>1550</width>
+    <height>937</height>
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
@@ -26,7 +26,7 @@
    <string>Simulator</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="../img/application.qrc">
+   <iconset resource="../../simulator_original/simulator/img/application.qrc">
     <normaloff>:/graph.png</normaloff>:/graph.png</iconset>
   </property>
   <widget class="QWidget" name="centralWidget">
@@ -38,7 +38,7 @@
      <widget class="QWidget" name="m_widget_play" native="true">
       <property name="minimumSize">
        <size>
-        <width>300</width>
+        <width>0</width>
         <height>0</height>
        </size>
       </property>
@@ -96,7 +96,58 @@
                  </property>
                 </widget>
                </item>
+               <item>
+                <widget class="QPushButton" name="m_pushButton_test">
+                 <property name="text">
+                  <string>Тестовые сигналы</string>
+                 </property>
+                 <property name="checkable">
+                  <bool>true</bool>
+                 </property>
+                </widget>
+               </item>
               </layout>
+             </item>
+             <item>
+              <widget class="QGroupBox" name="groupBox">
+               <property name="title">
+                <string/>
+               </property>
+               <layout class="QVBoxLayout" name="verticalLayout_6">
+                <property name="leftMargin">
+                 <number>0</number>
+                </property>
+                <property name="topMargin">
+                 <number>0</number>
+                </property>
+                <property name="rightMargin">
+                 <number>0</number>
+                </property>
+                <property name="bottomMargin">
+                 <number>0</number>
+                </property>
+                <item>
+                 <layout class="QHBoxLayout" name="horizontalLayout_11">
+                  <item>
+                   <widget class="QLabel" name="label">
+                    <property name="text">
+                     <string>Шум</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QComboBox" name="m_comboBox_noise">
+                    <item>
+                     <property name="text">
+                      <string>Нет</string>
+                     </property>
+                    </item>
+                   </widget>
+                  </item>
+                 </layout>
+                </item>
+               </layout>
+              </widget>
              </item>
              <item>
               <widget class="QListView" name="m_listView_diogram"/>
@@ -124,22 +175,35 @@
                <item>
                 <widget class="QGroupBox" name="gb_sig_amp">
                  <property name="title">
-                  <string>Амплитуда, мВ</string>
+                  <string/>
                  </property>
                  <property name="alignment">
                   <set>Qt::AlignCenter</set>
                  </property>
-                 <layout class="QGridLayout" name="gridLayout_2">
+                 <layout class="QHBoxLayout" name="horizontalLayout_13">
+                  <property name="spacing">
+                   <number>1</number>
+                  </property>
                   <property name="leftMargin">
-                   <number>0</number>
+                   <number>1</number>
+                  </property>
+                  <property name="topMargin">
+                   <number>1</number>
                   </property>
                   <property name="rightMargin">
-                   <number>0</number>
+                   <number>1</number>
                   </property>
                   <property name="bottomMargin">
-                   <number>0</number>
+                   <number>1</number>
                   </property>
-                  <item row="0" column="0">
+                  <item>
+                   <widget class="QLabel" name="label_2">
+                    <property name="text">
+                     <string>Амплитуда, мВ</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
                    <widget class="QDoubleSpinBox" name="dsb_sig_amp">
                     <property name="singleStep">
                      <double>0.010000000000000</double>
@@ -152,25 +216,76 @@
                <item>
                 <widget class="QGroupBox" name="gb_sig_frec">
                  <property name="title">
-                  <string>Частота, Гц</string>
+                  <string/>
                  </property>
                  <property name="alignment">
                   <set>Qt::AlignCenter</set>
                  </property>
-                 <layout class="QGridLayout" name="gridLayout">
+                 <layout class="QHBoxLayout" name="horizontalLayout_15">
+                  <property name="spacing">
+                   <number>1</number>
+                  </property>
                   <property name="leftMargin">
-                   <number>0</number>
+                   <number>1</number>
+                  </property>
+                  <property name="topMargin">
+                   <number>1</number>
                   </property>
                   <property name="rightMargin">
-                   <number>0</number>
+                   <number>1</number>
                   </property>
                   <property name="bottomMargin">
-                   <number>0</number>
+                   <number>1</number>
                   </property>
-                  <item row="0" column="0">
+                  <item>
+                   <widget class="QLabel" name="label_3">
+                    <property name="text">
+                     <string>Частота, Гц</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
                    <widget class="QDoubleSpinBox" name="dsb_sig_frec">
                     <property name="singleStep">
                      <double>0.010000000000000</double>
+                    </property>
+                   </widget>
+                  </item>
+                 </layout>
+                </widget>
+               </item>
+               <item>
+                <widget class="QGroupBox" name="groupBox_2">
+                 <property name="title">
+                  <string/>
+                 </property>
+                 <layout class="QHBoxLayout" name="horizontalLayout_16">
+                  <property name="spacing">
+                   <number>1</number>
+                  </property>
+                  <property name="leftMargin">
+                   <number>1</number>
+                  </property>
+                  <property name="topMargin">
+                   <number>1</number>
+                  </property>
+                  <property name="rightMargin">
+                   <number>1</number>
+                  </property>
+                  <property name="bottomMargin">
+                   <number>1</number>
+                  </property>
+                  <item>
+                   <widget class="QLabel" name="label_4">
+                    <property name="text">
+                     <string>Кол-во повторений</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QSpinBox" name="m_doubleSpinBox_count_2">
+                    <property name="minimum">
+                     <number>1</number>
                     </property>
                    </widget>
                   </item>
@@ -604,6 +719,11 @@
                       <string>линия</string>
                      </property>
                     </item>
+                    <item>
+                     <property name="text">
+                      <string>Треугольник</string>
+                     </property>
+                    </item>
                    </widget>
                   </item>
                  </layout>
@@ -625,66 +745,71 @@
               </widget>
              </item>
              <item row="1" column="0">
-              <layout class="QHBoxLayout" name="horizontalLayout_20">
-               <item>
-                <spacer name="horizontalSpacer">
-                 <property name="orientation">
-                  <enum>Qt::Horizontal</enum>
-                 </property>
-                 <property name="sizeHint" stdset="0">
-                  <size>
-                   <width>40</width>
-                   <height>20</height>
-                  </size>
-                 </property>
-                </spacer>
-               </item>
-               <item>
-                <widget class="QPushButton" name="pb_add">
-                 <property name="sizePolicy">
-                  <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-                   <horstretch>0</horstretch>
-                   <verstretch>0</verstretch>
-                  </sizepolicy>
-                 </property>
-                 <property name="icon">
-                  <iconset resource="../img/application.qrc">
-                   <normaloff>:/add.png</normaloff>:/add.png</iconset>
-                 </property>
-                </widget>
-               </item>
-               <item>
-                <widget class="QPushButton" name="pb_del">
-                 <property name="sizePolicy">
-                  <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-                   <horstretch>0</horstretch>
-                   <verstretch>0</verstretch>
-                  </sizepolicy>
-                 </property>
-                 <property name="icon">
-                  <iconset resource="../img/application.qrc">
-                   <normaloff>:/remove.png</normaloff>:/remove.png</iconset>
-                 </property>
-                </widget>
-               </item>
-               <item>
-                <widget class="QPushButton" name="pb_edit">
-                 <property name="sizePolicy">
-                  <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-                   <horstretch>0</horstretch>
-                   <verstretch>0</verstretch>
-                  </sizepolicy>
-                 </property>
-                 <property name="icon">
-                  <iconset resource="../img/application.qrc">
-                   <normaloff>:/edit.png</normaloff>:/edit.png</iconset>
-                 </property>
-                 <property name="checkable">
-                  <bool>true</bool>
-                 </property>
-                </widget>
-               </item>
-              </layout>
+              <widget class="QWidget" name="horizontalLayout_21" native="true">
+               <layout class="QHBoxLayout" name="horizontalLayout_20">
+                <property name="spacing">
+                 <number>1</number>
+                </property>
+                <item>
+                 <spacer name="horizontalSpacer">
+                  <property name="orientation">
+                   <enum>Qt::Horizontal</enum>
+                  </property>
+                  <property name="sizeHint" stdset="0">
+                   <size>
+                    <width>40</width>
+                    <height>20</height>
+                   </size>
+                  </property>
+                 </spacer>
+                </item>
+                <item>
+                 <widget class="QPushButton" name="pb_add">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
+                  </property>
+                  <property name="icon">
+                   <iconset resource="../../simulator_original/simulator/img/application.qrc">
+                    <normaloff>:/add.png</normaloff>:/add.png</iconset>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QPushButton" name="pb_del">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
+                  </property>
+                  <property name="icon">
+                   <iconset resource="../../simulator_original/simulator/img/application.qrc">
+                    <normaloff>:/remove.png</normaloff>:/remove.png</iconset>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QPushButton" name="pb_edit">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
+                  </property>
+                  <property name="icon">
+                   <iconset resource="../../simulator_original/simulator/img/application.qrc">
+                    <normaloff>:/edit.png</normaloff>:/edit.png</iconset>
+                  </property>
+                  <property name="checkable">
+                   <bool>true</bool>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </widget>
              </item>
             </layout>
            </widget>
@@ -759,23 +884,23 @@
          </layout>
         </widget>
        </item>
+       <item>
+        <widget class="QStackedWidget" name="m_stackedWidget">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>0</height>
+          </size>
+         </property>
+        </widget>
+       </item>
       </layout>
-     </widget>
-    </item>
-    <item>
-     <widget class="QStackedWidget" name="m_stackedWidget">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="minimumSize">
-       <size>
-        <width>0</width>
-        <height>0</height>
-       </size>
-      </property>
      </widget>
     </item>
    </layout>
@@ -785,7 +910,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1472</width>
+     <width>1550</width>
      <height>22</height>
     </rect>
    </property>
@@ -827,7 +952,7 @@
   <widget class="QStatusBar" name="statusBar"/>
   <action name="action_open">
    <property name="icon">
-    <iconset resource="../img/application.qrc">
+    <iconset resource="../../simulator_original/simulator/img/application.qrc">
      <normaloff>:/open.png</normaloff>:/open.png</iconset>
    </property>
    <property name="text">
@@ -839,7 +964,7 @@
   </action>
   <action name="action_save">
    <property name="icon">
-    <iconset resource="../img/application.qrc">
+    <iconset resource="../../simulator_original/simulator/img/application.qrc">
      <normaloff>:/save.png</normaloff>:/save.png</iconset>
    </property>
    <property name="text">
@@ -851,7 +976,7 @@
   </action>
   <action name="action_exit">
    <property name="icon">
-    <iconset resource="../img/application.qrc">
+    <iconset resource="../../simulator_original/simulator/img/application.qrc">
      <normaloff>:/exit.png</normaloff>:/exit.png</iconset>
    </property>
    <property name="text">
@@ -866,7 +991,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="../img/application.qrc">
+    <iconset resource="../../simulator_original/simulator/img/application.qrc">
      <normaloff>:/start.png</normaloff>:/start.png</iconset>
    </property>
    <property name="text">
@@ -881,7 +1006,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="../img/application.qrc">
+    <iconset resource="../../simulator_original/simulator/img/application.qrc">
      <normaloff>:/record.png</normaloff>:/record.png</iconset>
    </property>
    <property name="text">
@@ -899,7 +1024,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="../img/application.qrc">
+    <iconset resource="../../simulator_original/simulator/img/application.qrc">
      <normaloff>:/lines.png</normaloff>:/lines.png</iconset>
    </property>
    <property name="text">
@@ -917,7 +1042,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="../img/application.qrc">
+    <iconset resource="../../simulator_original/simulator/img/application.qrc">
      <normaloff>:/play.png</normaloff>:/play.png</iconset>
    </property>
    <property name="text">
@@ -967,9 +1092,7 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources>
-  <include location="../img/application.qrc"/>
- </resources>
+ <resources/>
  <connections>
   <connection>
    <sender>action_exit</sender>
